# TariffGuard

./: .env.example  .gitignore  Makefile  README.md  audit-output.json
backend/: pyproject.toml
backend/src/tariffguard/: seed_data.py
backend/src/tariffguard/handlers/: api.py  audit_worker.py  validation_worker.py
backend/src/tariffguard/models/: alert.py  session.py  tariff.py
backend/src/tariffguard/repositories/: cognito_repo.py  dynamodb_repo.py
backend/src/tariffguard/services/: idempotency.py  overview.py  pricing.py  validation.py
backend/src/tariffguard/utils/: logging.py  response.py  time.py
backend/tests/: test_api_idempotency.py  test_idempotency.py  test_overview.py  test_pricing.py  test_tariff_version_selection.py  test_validation.py  test_worker.py
examples/: changed-session.json  session.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  auth.ts  styles.css  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: StatusBadge.tsx  ViewState.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: format.ts
frontend/src/pages/: AlertsPage.tsx  AuditPage.tsx  OverviewPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx  TariffsPage.tsx  UsersPage.tsx
infra/: .terraform.lock.hcl  api_gateway.tf  cloudwatch.tf  cognito.tf  dynamodb.tf  eventbridge.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  provider.tf  sqs.tf  terraform.tfvars  variables.tf
scripts/: package_lambda.py  seed.py  simulate_sessions.py
